--- a/styles.css
+++ b/styles.css
@@ -100,14 +100,14 @@ h4, h5, h6 {
 
 a,
 h3.article-title a:hover {
-  color: #4caf50;
+  color: #1058CE;
   text-decoration: none;
   transition: color 0.6s ease;
 }
 
 a:hover,
 a:focus {
-  color: #4caf50;
+  color: #1058CE;
 }
 
 img,
@@ -529,7 +529,7 @@ article {
 }
 
 .article-metadata a:hover {
-  color: #4caf50;
+  color: #1058CE;
 }
 
 .article-list-item {
@@ -863,8 +863,8 @@ footer a#back_to_top i {
  **************************************************/
 
 .btn-primary {
-  border-color: #4caf50 !important;
-  background: #4caf50 !important;
+  border-color: #1058CE !important;
+  background: #1058CE !important;
 }
 
 .btn-primary:hover,
@@ -872,7 +872,7 @@ footer a#back_to_top i {
 .btn-primary.active,
 .btn-primary:visited,
 .open > .dropdown-toggle.btn-primary {
-  background: #4caf50 !important;
+  background: #1058CE !important;
 }
 
 .btn-light {
@@ -925,12 +925,12 @@ footer a#back_to_top i {
 }
 
 .btn-primary.btn-outline {
-  color: #4caf50 !important;
-  border-color: #4caf50 !important;
+  color: #1058CE !important;
+  border-color: #1058CE !important;
 }
 
 .btn-primary.btn-outline:focus {
-  color: #4caf50 !important;
+  color: #1058CE !important;
 }
 
 .btn-primary.btn-outline:active {
@@ -984,7 +984,7 @@ footer a#back_to_top i {
 }
 
 .navbar-default {
-  background: #4caf50;
+  background: #1058CE;
   box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,.11)
 }
 
@@ -1046,7 +1046,7 @@ nav#navbar-main li {
 }
 
 .dropdown-menu {
-  background-color: #4caf50 !important;
+  background-color: #1058CE !important;
 }
 
 .dropdown-menu > li > a {
@@ -1063,13 +1063,13 @@ nav#navbar-main li {
 .dropdown-menu>li>a:hover {
   color: #1b5e20;
   text-decoration: none;
-  background-color: #4caf50;
+  background-color: #1058CE;
 }
 
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:focus,
 .dropdown-menu > .active > a:hover {
-  color: #4caf50;
+  color: #1058CE;
   text-decoration: none;
   background-color: #1b5e20;
   outline: 0;
@@ -1080,7 +1080,7 @@ nav#navbar-main li {
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>.open>a:visited {
   color: #fff !important;
-  background-color: #4caf50 !important;
+  background-color: #1058CE !important;
 }
 
 .navbar-default .navbar-brand {
@@ -1342,7 +1342,7 @@ body.dark {
 }
 
 .dark ul.share li a {
-  background-color: #4caf50;
+  background-color: #1058CE;
 }
 
 .dark table table {
@@ -1396,7 +1396,7 @@ body.dark {
 }
 
 .dark .card h4 a {
-  color: #4caf50;
+  color: #1058CE;
   border-bottom: solid 1px transparent;
 }
 
